tests/errors/surf_cont_05.experr
pop from an empty Set
